start a register page designing

--- a/html/register.html
+++ b/html/register.html
@@ -40,8 +40,87 @@
   </head>
   <body>
     <main>
-      <div>
-        <h1>Register</h1>
+      <div class="container">
+        <div class="leftSide">
+          <img
+            src="../images/logoPictures/snapSyncLogo.png"
+            alt="Snap Sync Logo"
+          />
+          <article>
+            <h1>Here marks the genesis of creation.</h1>
+            <p>
+              Unlock a treasure trove of 5,693,767 exclusive, high-resolution
+              photos unavailable anywhere else.
+            </p>
+          </article>
+          <div class="credits">
+            Photo by
+            <a
+              href="https://unsplash.com/@sixteenmilesout?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+              >Sixteen Miles Out</a
+            >
+            on
+            <a
+              href="https://unsplash.com/photos/brown-and-white-flower-bouquet-on-brown-wicker-basket-Yv8a7QK3VJ8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+              >Unsplash</a
+            >
+          </div>
+        </div>
+        <div class="rightSide">
+          <div class="div1">
+            <h1>Join Snap Sync</h1>
+            <span
+              >Already have an account?
+              <a href="../html/login.html">Login</a></span
+            >
+          </div>
+          <div class="div1">
+            <span
+              ><img
+                src="../images/sociaLicon/facebook.png"
+                alt="Facebook Icon"
+              />Join Using Facebook</span
+            >
+          </div>
+          <div class="or">OR</div>
+          <form>
+            <div class="firstAndLastName">
+              <div class="firstName">
+                <label for="firstName">First Name</label>
+                <input
+                  type="text"
+                  name="firstName"
+                  id="firstName"
+                  required
+                  autofocus
+                />
+              </div>
+              <div class="lastName">
+                <label for="lastName">Last Name</label>
+                <input type="text" name="lastName" id="lastName" required />
+              </div>
+            </div>
+            <div class="email">
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" required />
+            </div>
+            <div class="username">
+              <label for="username">Username</label>
+              <input type="text" name="username" id="username" required />
+            </div>
+            <div class="password">
+              <label for="password">Password</label>
+              <input type="password" name="password" id="password" required />
+            </div>
+            <button type="submit">Login</button>
+          </form>
+          <div class="agreement">
+            <span
+              >By joining, you agree to the <a href="">Terms</a> and
+              <a href="">Privacy Policy.</a></span
+            >
+          </div>
+        </div>
       </div>
     </main>
   </body>
