desgined completed for register and forgot password page

--- a/html/forgotPassword.html
+++ b/html/forgotPassword.html
@@ -33,15 +33,39 @@
 
     <!-- Linked With CSS Files Starts Are Here -->
     <link rel="stylesheet" href="../css/default.css" />
-    <link rel="stylesheet" href="../css/register.css" />
+    <link rel="stylesheet" href="../css/forgotPassword.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
-    <title>Snap Sync Password Forgot?</title>
+    <title>Snap Sync Password Forgot Page?</title>
   </head>
   <body>
     <main>
-      <div>
-        <h1>Forgot Your Password?</h1>
+      <div class="container">
+        <img
+          src="../images/logoPictures/snapSyncLogo.png"
+          alt="Snap Sync Logo"
+        />
+        <article>
+          <h1>Forgot your password?</h1>
+          <p>
+            Please provide the email address linked to your account, and we will
+            dispatch a link to facilitate the password reset process.
+          </p>
+        </article>
+        <form onclick="event.preventDefault()">
+          <div class="email">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              required
+              autocomplete="email"
+              autofocus
+            />
+          </div>
+          <button type="submit">Send password reset instructions</button>
+        </form>
       </div>
     </main>
   </body>
