--- a/html/login.html
+++ b/html/login.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="../css/loginForm.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
-    <title>Snap Sync Login</title>
+    <title>Snap Sync Login Page</title>
   </head>
   <body>
     <main>
