--- a/html/register.html
+++ b/html/register.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="../css/register.css" />
     <!-- Linked With CSS Files Ends Are Here-->
 
-    <title>Snap Sync Register Form</title>
+    <title>Snap Sync Registration Page</title>
   </head>
   <body>
     <main>
@@ -74,13 +74,9 @@
               <a href="../html/login.html">Login</a></span
             >
           </div>
-          <div class="div1">
-            <span
-              ><img
-                src="../images/sociaLicon/facebook.png"
-                alt="Facebook Icon"
-              />Join Using Facebook</span
-            >
+          <div class="div2">
+            <img src="../images/sociaLicon/facebook.png" alt="Facebook Icon" />
+            <span>Join Using Facebook</span>
           </div>
           <div class="or">OR</div>
           <form>
