add a event.preventDefault() for reset default form submissinon in forgotPassword.html login.html register.html

--- a/html/forgotPassword.html
+++ b/html/forgotPassword.html
@@ -52,7 +52,7 @@
             dispatch a link to facilitate the password reset process.
           </p>
         </article>
-        <form onclick="event.preventDefault()">
+        <form onsubmit="event.preventDefault()">
           <div class="email">
             <label for="email">Email</label>
             <input
