--- a/html/login.html
+++ b/html/login.html
@@ -55,7 +55,7 @@
         </div>
         <div class="or">OR</div>
         <div class="loginForm">
-          <form>
+          <form onsubmit="event.preventDefault()">
             <div class="email">
               <label for="email">Email</label>
               <input
