--- a/html/register.html
+++ b/html/register.html
@@ -79,7 +79,7 @@
             <span>Join Using Facebook</span>
           </div>
           <div class="or">OR</div>
-          <form>
+          <form onsubmit="event.preventDefault()">
             <div class="firstAndLastName">
               <div class="firstName">
                 <label for="firstName">First Name</label>
