wrapped the trending keyword anchor to main list item li in index.html line 369

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </article>
             <div class="trendingSearches">
               <ul class="trending">
-                <li><a href="">Trending: </a></li>
+                <li>Trending:</li>
                 <li><a href="">follower,</a></li>
                 <li><a href="">wallpapers,</a></li>
                 <li><a href="">background,</a></li>
