Starts a responsive design of header

--- a/index.html
+++ b/index.html
@@ -310,6 +310,18 @@
                 </select>
               </div>
             </div>
+            <div class="sshUserActionsMobile">
+              <div class="sshLoginButtonMobile">
+                <button>Submit a photo</button>
+                <a href="./html/login.html">Log In</a>
+              </div>
+              <div class="signUpMobileLink">
+                <span
+                  >New to SnapSync?
+                  <a href="./html/register.html">Sign up for free</a></span
+                >
+              </div>
+            </div>
           </div>
           <!-- Menu Ends Are Here -->
         </div>
