header responsive design completed

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                     alt="Company icon"
                   />
                   <strong>Company</strong>
+                  <img
+                    class="arrowImg"
+                    src="./images/headerPictures/menuIcon/arrow-up.png"
+                    alt="Down Arrow"
+                  />
                 </div>
                 <div class="sshMenuBoxLinks">
                   <ul>
@@ -150,6 +155,11 @@
                     alt="Products icon"
                   />
                   <strong>Products</strong>
+                  <img
+                    class="arrowImg"
+                    src="./images/headerPictures/menuIcon/arrow-up.png"
+                    alt="Down Arrow"
+                  />
                 </div>
                 <div class="sshMenuBoxLinks">
                   <ul>
@@ -167,6 +177,11 @@
                     alt="Community icon"
                   />
                   <strong>Community</strong>
+                  <img
+                    class="arrowImg"
+                    src="./images/headerPictures/menuIcon/arrow-up.png"
+                    alt="Down Arrow"
+                  />
                 </div>
                 <div class="sshMenuBoxLinks">
                   <ul>
