all responsive design completed

--- a/index.html
+++ b/index.html
@@ -800,13 +800,22 @@
         <div class="social">
           <ul>
             <li>
-              <img src="./images/sociaLicon/twitter.png" alt="Twitter Icon" />
-            </li>
-            <li>
-              <img src="./images/sociaLicon/facebook.png" alt="Facebook Icon" />
+              <img
+                title="X / Twitter"
+                src="./images/sociaLicon/twitter.png"
+                alt="Twitter Icon"
+              />
             </li>
             <li>
               <img
+                title="Facebook"
+                src="./images/sociaLicon/facebook.png"
+                alt="Facebook Icon"
+              />
+            </li>
+            <li>
+              <img
+                title="Instagram"
                 src="./images/sociaLicon/instagram.png"
                 alt="Instagram Icon"
               />
