updated the new year copyright notice add 2024

--- a/index.html
+++ b/index.html
@@ -790,6 +790,22 @@
         </div>
       </div>
       <div class="footerBar">
+        <div class="copyright">
+          <span
+            >Copyright &copy; 2023 - 2024, By
+            <a href="https://www.github.com/tufanmulla">Tufan Mulla</a></span
+          >
+          <div class="viewOnGitHub">
+            <span
+              >View On
+              <a
+                title="Github Link"
+                href="https://www.github.com/tufanmulla/snapSync"
+                >Github</a
+              ></span
+            >
+          </div>
+        </div>
         <div class="pages">
           <ul>
             <li><a href="">Privacy Policy</a></li>
