modify on the copyright division

--- a/index.html
+++ b/index.html
@@ -792,9 +792,15 @@
       <div class="footerBar">
         <div class="copyright">
           <span
-            >Copyright &copy; 2023 - 2024, By
-            <a href="https://www.github.com/tufanmulla">Tufan Mulla</a></span
-          >
+            >Design and Developed With 💞 , By
+            <a
+              rel="noopener"
+              title="Tufan Mulla's Websites"
+              target="_blank"
+              href="https://www.tufanmulla.com/"
+              >Tufan Mulla</a
+            >
+          </span>
           <div class="viewOnGitHub">
             <span
               >View On
