update a footer copyright content

--- a/index.html
+++ b/index.html
@@ -798,19 +798,18 @@
               title="Tufan Mulla's Websites"
               target="_blank"
               href="https://www.tufanmulla.com/"
-              >Tufan Mulla</a
+              >Tufan Mulla,</a
             >
+            Since Nov 2023.
           </span>
-          <div class="viewOnGitHub">
-            <span
-              >View On
-              <a
-                title="Github Link"
-                href="https://www.github.com/tufanmulla/snapSync"
-                >Github</a
-              ></span
-            >
-          </div>
+          <span
+            >View On
+            <a
+              title="Github Link"
+              href="https://www.github.com/tufanmulla/snapSync"
+              >Github</a
+            ></span
+          >
         </div>
         <div class="pages">
           <ul>
