download and fetch ultimate section photo from same projects folder

--- a/index.html
+++ b/index.html
@@ -484,10 +484,7 @@
       <section class="ultimate">
         <div class="imageContainer">
           <div class="horizontal">
-            <img
-              src="https://images.unsplash.com/photo-1697486883490-208bd07c3268"
-              alt="Big"
-            />
+            <img src="./images/ultimateImage/img1.jpeg" alt="Big" />
             <div class="imageCredits">
               Photo by
               <a
@@ -502,10 +499,7 @@
             </div>
           </div>
           <div class="vertical">
-            <img
-              src="https://images.unsplash.com/photo-1518684079-3c830dcef090"
-              alt="Vertical"
-            />
+            <img src="./images/ultimateImage/img2.jpeg" alt="Vertical" />
             <div class="imageCredits">
               Photo by
               <a
@@ -520,10 +514,7 @@
             </div>
           </div>
           <div class="big">
-            <img
-              src="https://images.unsplash.com/flagged/photo-1559717865-a99cac1c95d8"
-              alt="Big"
-            />
+            <img src="./images/ultimateImage/img3.jpeg" alt="Big" />
             <div class="imageCredits">
               Photo by
               <a
@@ -539,10 +530,7 @@
           </div>
 
           <div class="horizontal">
-            <img
-              src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e"
-              alt="Horizontal"
-            />
+            <img src="./images/ultimateImage/img4.jpeg" alt="Horizontal" />
             <div class="imageCredits">
               Photo by
               <a
@@ -557,10 +545,7 @@
             </div>
           </div>
           <div class="vertical">
-            <img
-              src="https://images.unsplash.com/photo-1556305871-9cf6441a03cd"
-              alt="Vertical"
-            />
+            <img src="./images/ultimateImage/img5.jpeg" alt="Vertical" />
             <div class="imageCredits">
               Photo by
               <a
@@ -575,10 +560,7 @@
             </div>
           </div>
           <div class="big">
-            <img
-              src="https://images.unsplash.com/photo-1570129477492-45c003edd2be"
-              alt="Big"
-            />
+            <img src="./images/ultimateImage/img6.jpeg" alt="Big" />
             <div class="imageCredits">
               Photo by
               <a
@@ -594,10 +576,7 @@
           </div>
 
           <div class="horizontal">
-            <img
-              src="https://images.unsplash.com/photo-1519666336592-e225a99dcd2f"
-              alt="Horizontal"
-            />
+            <img src="./images/ultimateImage/img7.jpeg" alt="Horizontal" />
             <div class="imageCredits">
               Photo by
               <a
@@ -612,10 +591,7 @@
             </div>
           </div>
           <div class="vertical">
-            <img
-              src="https://images.unsplash.com/photo-1572358899655-f63ece97bfa5"
-              alt="Vertical"
-            />
+            <img src="./images/ultimateImage/img8.jpeg" alt="Vertical" />
             <div class="imageCredits">
               Photo by
               <a
@@ -630,10 +606,7 @@
             </div>
           </div>
           <div class="big">
-            <img
-              src="https://images.unsplash.com/photo-1605553378313-22d0dc541393"
-              alt="Big"
-            />
+            <img src="./images/ultimateImage/img9.jpeg" alt="Big" />
             <div class="imageCredits">
               Photo by
               <a
@@ -649,10 +622,7 @@
           </div>
 
           <div class="horizontal">
-            <img
-              src="https://images.unsplash.com/photo-1625535069654-cfeb8f829088"
-              alt="Vertical"
-            />
+            <img src="./images/ultimateImage/img10.jpeg" alt="Vertical" />
             <div class="imageCredits">
               Photo by
               <a
@@ -667,10 +637,7 @@
             </div>
           </div>
           <div class="vertical">
-            <img
-              src="https://images.unsplash.com/photo-1523961131990-5ea7c61b2107"
-              alt="Horizontal"
-            />
+            <img src="./images/ultimateImage/img11.jpeg" alt="Horizontal" />
             <div class="imageCredits">
               Photo by
               <a
@@ -685,10 +652,7 @@
             </div>
           </div>
           <div class="big">
-            <img
-              src="https://images.unsplash.com/photo-1493612276216-ee3925520721"
-              alt="Big"
-            />
+            <img src="./images/ultimateImage/img12.jpeg" alt="Big" />
             <div class="imageCredits">
               Photo by
               <a
@@ -703,10 +667,7 @@
             </div>
           </div>
           <div class="horizontal">
-            <img
-              src="https://images.unsplash.com/photo-1682687220866-c856f566f1bd"
-              alt="Horizontal"
-            />
+            <img src="./images/ultimateImage/img13.jpeg" alt="Horizontal" />
             <div class="imageCredits">
               Photo by
               <a
